delete account fin

--- a/views/add_manager_account.hbs
+++ b/views/add_manager_account.hbs
@@ -99,13 +99,13 @@
                           <th></th>
                         </tr>
                       </thead>
-                      <form action="/modifyAccount/addManager" method="POST">
+                      <form action="/modifyAccount/addManager" method="POST" id="submitform">
                         <tr>     
                           <td align='center' valign="middle"> 
                             <input type="text" class="form-control" id="id" name="id" value="" placeholder="" style="width: 250px" />
                           </td>
                            <td align='center' valign="middle"> 
-                            <input type="text" class="form-control" id="name" name="name" value="" placeholder="" style="width: 250px" />
+                            <input type="text" class="form-control" id="mname" name="name" value="" placeholder="" style="width: 250px" />
                           </td>
                           <td align='center' valign="middle"> 
                             <input type="text" class="form-control" id="phone" name="phone" value="" placeholder="" style="width: 250px" />
@@ -114,7 +114,7 @@
                             <input type="text" class="form-control" id="email" name="email" value="" placeholder="" style="width: 250px" />
                           </td>
                           <td align='center' valign="middle">
-                            <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; " type="submit" name="action" value="search" >
+                            <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; " id="add" type="button" name="action" value="search" >
                                 新增
                             </button>
                           </td>
@@ -136,7 +136,7 @@
     <br /><br /><br />
 <div class="container">
   <div class="accordion-body">
-    <table style="line-height: 10px" class="table table-hover">
+    <table style="line-height: 30px" class="table table-hover">
       <thead>
         <!--表示表格中不同直行 (column) 的標題-->
         <tr style="background-color: #dfd1ef">
@@ -193,6 +193,7 @@
         </div>
       </div>
     </footer>
+    <script src="add_manager_account.js"></script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
