--- a/views/supervisor_to_message.hbs
+++ b/views/supervisor_to_message.hbs
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>高雄大學宿舍管理系統</title>
-   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Font Awesome icons (free version)-->
     <script
@@ -28,7 +28,7 @@
       type="text/css"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navigation-->
@@ -58,6 +58,14 @@
                 </span>
               </a>
             </li>
+
+            <li class="nav-item">
+              <a
+                class="nav-link px-lg-3 py-3 py-lg-4"
+                href="/dormitory_detail"
+                >Introduction</a
+              >
+            </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4"
               href="/login">Log out</a>
@@ -72,7 +80,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="site-heading">
-              <h1>公告處</h1>
+              <h1>公告及留言板</h1>
             </div>
           </div>
         </div>
@@ -113,15 +121,15 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" > Close</button>
-                  <button type="submit" class="btn btn-primary">發布公告</button>
+                  <button type="submit" class="btn btn-primary">Send message</button>
                 </div>
                 </form>
               </div>
             </div>
           </div>
-      {{#if contentMessage}}
+      <!-- {{#if contentMessage}}
       <h4 style="color:red"; class="alert alert-danger mt-4">{{contentMessage}}</h4>
-      {{/if}}
+      {{/if}} -->
           <div class="box">
             <table class="table table-hover">
               <thead style="position:sticky;top: 0;"> 
@@ -141,71 +149,93 @@
                   <th width="8%" scope="col" style="background-color: #dfd1ef">
                     時間
                   </th>
-                  <th style="background-color: #dfd1ef">
-                  </th>
-                  <th style="background-color: #dfd1ef">
-                  </th>
-                  <th style="background-color: #dfd1ef">
-                  </th>
                 </tr>
               </thead>
 
               <tbody>
                 {{#each Bmessage}} 
-                <form action="/bulletin/action" method="POST">
-                  <div>
-                  <tr>
-                    <th scope="row">{{this.B_Number}}</th>
-                    <td>
-                      <!-- Button trigger modal -->
-                      <button
-                        type="button"
-                        style=" border: 0; padding-top: 10px; background-color: #eeecd9; color: rgb(0, 0, 0); border-radius: 10px; width:400px; font-size:20px;cursor: pointer; height: 40px; text-decoration: underline"
-                        class="btn btn-primary"
-                        data-bs-toggle="modal"
-                        data-bs-target="#b{{this.B_Number}}">
-                        {{this.B_Title}}
-                      </button>
-                      <div class="modal fade" id="b{{this.B_Number}}" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" >
-                        <div class="modal-dialog modal-lg modal-dialog-centered">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="staticBackdropLabel">
-                                公告內容
-                              </h5>
-                            </div>
-                            <div class="modal-body">
-                              {{this.B_Content}}
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" > Close</button>
-                            </div>
+                <div>
+                <tr>
+                  <th scope="row">{{this.B_Number}}</th>
+                  <td>
+                    <!-- Button trigger modal -->
+                    <button
+                      type="button"
+                      style=" border: 0; padding-top: 10px; background-color: #eeecd9; color: rgb(0, 0, 0); border-radius: 10px; width:400px; font-size:20px;cursor: pointer; height: 40px; text-decoration: underline"
+                      class="btn btn-primary"
+                      data-bs-toggle="modal"
+                      data-bs-target="#b{{this.B_Number}}">
+                      {{this.B_Title}}
+                    </button>
+                    <div class="modal fade" id="b{{this.B_Number}}" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true" >
+                      <div class="modal-dialog modal-lg modal-dialog-centered">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">
+                              留言內容
+                            </h5>
+                          </div>
+                          <div class="modal-body">
+                            {{this.B_Content}}
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" > Close</button>
                           </div>
                         </div>
                       </div>
-                    </td>
-                    <td>{{this.B_Manager_ID}}</td>
-                    <td>{{this.B_Date}}</td>
-                    <td>{{this.B_Time}}</td>
-                    <td></td>
-                    <td><button class='fas fa-hammer' style='font-size:32px' type="submit" name="action" value="update"></button></td>   <!--修改-->
-                    <td><button class="material-icons" style="font-size:40px;color:red" type="submit" name="action" value="delete">delete</button></td> <!--刪除-->
-                  </tr>
-                  </div>
-                </form>
+                    </div>
+                  </td>
+                  <td>{{this.B_Manager_ID}}</td>
+                  <td>{{this.B_Date}}</td>
+                  <td>{{this.B_Time}}</td>
+                </tr>
+                </div>
                  {{/each}} 
               </tbody>
             </table>
           </div>
         </div>
         <br /><br />
-        {{!-- <div id="Main">
+        <div id="Main">
           <div>
             <p align="center" style="color: #000000; font-weight: bold; font-size: 20px">
               留言板
             </p>
           </div>
-
+          <div style="text-align: left">
+            <button
+              type="button"
+              style=" width: 100px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset;"data-bs-toggle="modal"data-bs-target="#exampleModal"data-bs-whatever="@mdo">撰寫留言
+            </button>
+          </div>
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel" style="color: #000000; font-weight: bold" >
+                    撰寫處
+                  </h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form action="/message/write" method="POST">
+                <div class="modal-body">          
+                    <div class="mb-3">
+                      <label for="recipient-name" class="col-form-label" style="color: #335495; font-weight: bold" >標題:</label>
+                      <input type="text" class="form-control" id="title" name="title"/>
+                    </div>
+                    <div class="mb-3">
+                      <label for="message-text" class="col-form-label" style="color: #335495; font-weight: bold" >內容:</label>
+                      <textarea class="form-control" id="content" name="content"></textarea>
+                    </div>                
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" > Close</button>
+                  <button type="submit" class="btn btn-primary">Send message</button>
+                </div>
+                </form>
+              </div>
+            </div>
+          </div>
           <div class="box">
             <table class="table table-hover">
               <thead style="position:sticky;top: 0;">
@@ -225,6 +255,12 @@
                   <th width="8%" scope="col" style="background-color: #dfd1ef">
                     時間
                   </th>
+                  <th style="background-color: #dfd1ef">
+                
+                  </th>
+                  <th style="background-color: #dfd1ef">
+                  </th>
+                
                 </tr>
               </thead>
               <tbody>
@@ -262,12 +298,14 @@
                   <td>{{this.M_Student_ID}}</td>
                   <td>{{this.M_Date}}</td>
                   <td>{{this.M_Time}}</td>
+                  <td><i class='fas fa-hammer' style='font-size:32px'></i></td>   <!--修改-->
+                  <td><i class="material-icons" style="font-size:40px;color:red">delete</i></td> <!--刪除-->
                 </tr>
                  {{/each}} 
                 <tr></tr>
               </tbody>
             </table>
-          </div> --}}
+          </div>
         </div>
         <br />
         <br />
