--- a/views/supervisor_to_violation.hbs
+++ b/views/supervisor_to_violation.hbs
@@ -26,7 +26,7 @@
       type="text/css"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navigation-->
@@ -58,6 +58,13 @@
                   ></button>
                 </span>
               </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link px-lg-3 py-3 py-lg-4"
+                href="/dormitory_detail"
+                >Introduction</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">Log out</a>
