--- a/views/student_checkout_dormitory.hbs
+++ b/views/student_checkout_dormitory.hbs
@@ -1,4 +1,4 @@
-<html lang="en">
+{{!-- <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -88,4 +88,6 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> --}}
+
+  <meta http-equiv="Refresh"  content="0; URL=checkout_dormitory.pdf" >
