--- a/views/student_change_dormitory.hbs
+++ b/views/student_change_dormitory.hbs
@@ -1,4 +1,4 @@
-<html lang="en">
+{{!-- <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -27,6 +27,7 @@
     />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/styles.css" rel="stylesheet" />
+    <link href="/change_dormitory.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navigation-->
@@ -89,3 +90,82 @@
         </div>
       </div>
     </header>
+
+    <div id="container">
+
+  <div class="icon_wrapper">
+      <h1>&bull;換宿表單 &bull;</h1>
+  </div>
+
+  <form action="#" method="post" id="contact_form">
+    <div class="name">
+      <label for="name"></label>
+      <input type="text" placeholder="學生1" name="name" id="name_input" required>
+    </div>
+    <div class="email">
+      <label for="email"></label>
+      <input type="email" placeholder="學生2" name="name" id="name_input1" required>
+    </div>
+    <div class="telephone">
+      <label for="name"></label>
+      <input type="text" placeholder="My number is" name="telephone" id="telephone_input" required>
+    </div>
+    <div class="subject">
+      <label for="subject"></label>
+      <select name="subject" id="subject_input" required>
+       <option selected>換宿棟別</option>
+       <option value=1>學生第一宿舍(OA-男)</option>
+       <option value=2>學生第一宿舍(OB-女)</option>
+       <option value=3>學生第二宿舍(OE-男)</option>
+       <option value=4>學生第二宿舍(OF-女)</option>
+       <option value=5>綜合宿舍(B01-男)</option>
+      </select>
+    </div>
+    <div class="message">
+      <label for="message"></label>
+      <textarea name="message" placeholder="I'd like to chat about" id="message_input" cols="30" rows="5" required></textarea>
+    </div>
+    <div class="submit">
+      <input type="submit" value="確認送出" id="form_button" />
+    </div>
+  </form><!-- // End form -->
+</div><!-- // End #container -->
+
+    <br /><br /><br />
+    <footer class="border-top">
+      <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+          <div class="col-md-10 col-lg-8 col-xl-7">
+            <div id="top-footer">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-6 contact">
+                    <i class="fa-solid fa-paperclip" style="display: inline;float: left;width: 30px;height: 30px;"></i>
+                    <h3>高雄大學網站:</h3>
+                   
+                    <a href="https://www.nuk.edu.tw/" target="_blank" 
+                      >https://www.nuk.edu.tw/</a
+                    >
+                  </div>
+                  <div class="col-md-6 social">
+                    <i class="fa-solid fa-chalkboard-user" style="display: inline;float: left;width: 30px;height: 30px;"></i>
+                    <h3>moodle平台:</h3>
+                    <a href="https://elearningv4.nuk.edu.tw/" target="_blank"
+                      >https://elearningv4.nuk.edu.tw/</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+</body>
+</html> --}}
+
+
+<meta http-equiv="Refresh" content="0; URL=change_dormitory.pdf">
