--- a/views/student_to_apply.hbs
+++ b/views/student_to_apply.hbs
@@ -65,11 +65,11 @@
            
               <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
-              href="/student_change_dormitory">換宿申請</a>
+              href="/student_change_dormitory">換宿申請表單</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
-              href="/student_checkout_dormitory">退宿申請</a>
+              href="/student_checkout_dormitory">退宿申請表單</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" style="font-size:15px"
