--- a/views/supervisor_to_violation.hbs
+++ b/views/supervisor_to_violation.hbs
@@ -26,7 +26,7 @@
       type="text/css"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="styles.css" rel="stylesheet" />
+    <link href="/styles.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navigation-->
