修改管理員、舍監的公告子系統，舍監的查詢學生

--- a/views/home_manager.hbs
+++ b/views/home_manager.hbs
@@ -120,7 +120,7 @@
             <a href="/manager_to_student">
               <h2 class="post-title">學生基本資料</h2>
               <h5 class="post-subtitle">
-                管理人員可以在此新增新學生 刪除學生 查詢學生 修改學生基本資料
+                管理人員可以在此 刪除學生 查詢學生 修改學生基本資料
               </h5>
             </a>
           </div>
