--- a/views/manager_to_student.hbs
+++ b/views/manager_to_student.hbs
@@ -78,7 +78,7 @@
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
-      <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢 / 新增資料
+      <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢資料
       </button>
       <i class="fa-solid fa-caret-down"></i>
     </h2>
@@ -97,7 +97,6 @@
               <th align='center' valign="middle"scope="col">系所</th>
               <th align='center' valign="middle"scope="col">連絡電話</th>
               <th align='center' valign="middle"scope="col">Email</th>
-              <th></th>
               <th></th>
             </tr>
           </thead>
@@ -182,11 +181,6 @@
               <td align='center' valign="middle">
                 <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; " type="submit" name="action" value="search" >
                     查詢
-                </button>
-              </td>
-              <td>
-                <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; " type="submit" name="action" value="add">
-                  新增
                 </button>
               </td>
             </tr>
