--- a/views/supervisor_to_student.hbs
+++ b/views/supervisor_to_student.hbs
@@ -82,34 +82,122 @@
       </div>
     </header>
     <!-- Post Content-->
-    <div class="container">
-      <table style="line-height: 30px" class="table table-hover">
-        <!--表示表格中不同直行 (column) 的標題-->
-        <tr style="background-color: #dfd1ef">
-          <!--定義表格的橫列 (row)-->
-          <th scope="col" align='center' valign="middle">學號</th>
-          <th scope="col" align='center' valign="middle">姓名</th>
-          <th scope="col" align='center' valign="middle">性別</th>
-          <th scope="col" align='center' valign="middle">學年度</th>
-          <th scope="col" align='center' valign="middle">系所</th>
-          <th scope="col" align='center' valign="middle">連絡電話</th>
-          <th scope="col" align='center' valign="middle">Email</th>
-        </tr>
-
-        <tbody>
-           <!-- {{#each message}}  -->
-          <tr>
-            <th scope="row" align='center' valign="middle">{{this.M_ID}}</th>
-            <td >{{this.M_Name}}</td>
-            <td >{{this.M_Phone}}</td>
-            <td >{{this.M_Email}}</td>
-            <td >{{this.M_Name}}</td>
-          </tr>      
-          <!-- {{/each}}  -->
-          <tr></tr>
-        </tbody>
-      </table>
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="button" style=" text-align: center; background-color: #ffffff; border: 4px #a67fd2 outset; color: #000000; " type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne"> 查詢資料
+      </button>
+      <i class="fa-solid fa-caret-down"></i>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="container">
+        <table style="line-height: 10px" class="table table-hover">
+          <thead>
+            <!--表示表格中不同直行 (column) 的標題-->
+            <tr style="background-color: #dfd1ef">
+              <!--定義表格的橫列 (row)-->
+              <th align='center' valign="middle"scope="col">學號</th>
+              <th align='center' valign="middle"scope="col">姓名</th>
+              <th align='center' valign="middle"scope="col">性別</th>
+              <th align='center' valign="middle"scope="col">學年度</th>
+              <th align='center' valign="middle"scope="col">系所</th>
+              <th align='center' valign="middle"scope="col">連絡電話</th>
+              <th align='center' valign="middle"scope="col">Email</th>
+              <th></th>
+            </tr>
+          </thead>
+          <form action="/managerToStudent/action" method="POST">
+            <tr>
+              <td align='center' valign="middle">
+                <input type="text" class="form-control" id="studentID" name="studentID" value="" placeholder="" style="width: 100px" />
+              </td>
+              <td align='center' valign="middle"> 
+                <input type="text" class="form-control" id="name" name="name" value="" placeholder="" style="width: 100px" />
+              </td>
+              <td align='center' valign="middle">
+                <select id="sex" name="sex" style="width: 130px" class="form-select" >
+                  <option selected>選擇性別</option>
+                  <option value="男">男生</option>
+                  <option value="女">女生</option>
+                </select>
+              </td>
+              <td align='center' valign="middle">
+                <select id="academicYear" name="academicYear" style="width: 130px" class="form-select" >
+                  <option selected>選擇學年度</option>
+                  <option value="111">111</option>
+                  <option value="110">110</option>
+                  <option value="109">109</option>
+                  <option value="108">108</option>
+                  <option value="107">107</option>
+                  <option value="106">106</option>
+                </select>
+              </td>
+              <td align='center' valign="middle">
+                <select id="department" name="department" style="width: 230px" class="form-select" >
+                  <option selected>選擇系所</option>
+                  <optgroup label="人文社會科學院">
+                    <option value="西洋語文學系">西洋語文學系</option>
+                    <option value="運動健康與休閒學系">
+                      運動健康與休閒學系
+                    </option>
+                    <option value="東亞語文學系">東亞語文學系</option>
+                    <option value="運動競技學系">運動競技學系</option>
+                    <option value="建築學系">建築學系</option>
+                    <option value="工藝與創意設計學系">
+                      工藝與創意設計學系
+                    </option>
+                  </optgroup>
+                  <optgroup label="法學院">
+                    <option value="法律學系">法律學系</option>
+                    <option value="政治法律學系">政治法律學系</option>
+                    <option value="財經法律學系">財經法律學系</option>
+                  </optgroup>
+                  <optgroup label="管理學院">
+                    <option value="應用經濟學系">應用經濟學系</option>
+                    <option value="亞太工商管理學系">
+                      亞太工商管理學系
+                    </option>
+                    <option value="金融管理學系">金融管理學系</option>
+                    <option value="資訊管理學系">資訊管理學系</option>
+                  </optgroup>
+                  <optgroup label="理學院">
+                    <option value="應用數學系">應用數學系</option>
+                    <option value="生命科學系">生命科學系</option>
+                    <option value="應用化學系">應用化學系</option>
+                    <option value="應用物理學系">應用物理學系</option>
+                  </optgroup>
+                  <optgroup label="工學院">
+                    <option value="電機工程學系">電機工程學系</option>
+                    <option value="土木與環境工程學系">
+                      土木與環境工程學系
+                    </option>
+                    <option value="化學工程及材料工程學系">
+                      化學工程及材料工程學系
+                    </option>
+                    <option value="資訊工程學系">資訊工程學系</option>
+                  </optgroup>
+                </select>
+              </td>
+              <td align='center' valign="middle"> 
+                <input type="text" class="form-control" id="phone" name="phone" value="" placeholder="" style="width: 120px" />
+              </td>
+              <td align='center' valign="middle">
+                <input type="text" class="form-control" id="email" name="email" value="" placeholder="" style="width: 120px" />
+              </td>
+              <td align='center' valign="middle">
+                <button style=" width: 75px; height: 40px; background-color: #335495; color: #ffffff; border: 2px #335495 outset; " type="submit" name="action" value="search" >
+                    查詢
+                </button>
+              </td>
+            </tr>
+          </form>
+        </table>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
     <a href="#top" class="top" style="float: right;display: none;" id="up"><i  style="width: 50px;height: 50px;"class="fa-regular fa-circle-up"></i></a>
     <!-- Footer-->
     <br /><br /><br /><br /><br /><br /> <br /><br /><br /><br /><br /><br />
