--- a/views/login.hbs
+++ b/views/login.hbs
@@ -104,6 +104,9 @@ background-attachment: fixed;backdrop-filter:blur(3px);   " background='../350.j
         <a href="/forget_password">
           <h5>忘記密碼</h5>
         </a>
+         <a href="/home_visitor">
+          <h5>訪客登入</h5>
+        </a>
 
       </div>
       {{#if message}}
